@@ -1405,6 +1405,19 @@ This means that the files being imported must be copied into a \
 folder underneath your install directory before use.  See the help \
 on VFS for more information on this concept.
 
+MOTD=\
+Command : MOTD\n\r\
+Usage   : MOTD (ON/OFF/PREVIOUS ([NUM])/AGAIN/SET)\n\r\
+Example : motd\n\r\
+Example : motd again\n\r\
+Example : motd set\n\r\
+Short(s): \n\r\
+Allows the admin to review the news and daily message, or set a new daily message.  Using \
+ON and OFF, you can also set whether or not you see the message of the day when you log \
+in to the mud.  Using AGAIN will re-show the current new daily message, \
+while PREVIOUS will show all the old daily messages, with an optional limit. \
+Use SET to set the MOTD.txt file.
+
 MERGE=\
 Command  : MERGE\n\r\
 Usage    : MERGE (AREA/ROOM) (CHANGE=[FIELD,..]) (ON=[FIELD,..]) (IGNORE=[FIELD,..]) [PATH & FILE NAME]\n\r\
